--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm fixed-top navbar-dark mx-auto" style="background-color:black;">
+  <header>  
+  <nav class="navbar navbar-expand-sm fixed-top navbar-dark mx-auto" style="background-color:black;">
         <!-- Brand -->
         
       
@@ -94,6 +95,7 @@
           </li>
         </ul>
       </nav>
+  </header>
     <div class="hero-image">
         <div class="hero-text"><h1 style="font-size:120px">HARSHIL SAGAR</h1> <h3>Welcome to my official page</h3> swipe up to know more<br><br>
         <a href="#hspeaks"><button class="btn btn-outline-warning btn-lg">Harshil Speaks</button></a></div>
