--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </head>
 <body>
   <header>  
-  <nav class="navbar navbar-expand-sm fixed-top navbar-dark mx-auto" style="background-color:black;">
+  <nav class="navbar navbar-expand-sm navbar-dark mx-auto" style="background-color:black;">
         <!-- Brand -->
         
       
