--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 </head>
 <body>
   <header>  
-  <nav class="navbar navbar-expand-sm navbar-dark mx-auto" style="background-color:black;">
+  <nav class="navbar navbar-expand-sm navbar-dark mx-auto navbar-toggle" style="background-color:black;">
         <!-- Brand -->
         
       
