--- a/index.html
+++ b/index.html
@@ -59,38 +59,19 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
-@media (max-width: 767px) {
-  .navbar-brand {
-    width: auto;
-    float: none;
-    border-bottom: 0 solid transparent;
-    margin: 0 -15px;
-  }  
-  .navbar-toggle {
-    float: left;
-  }
-  .nav-user-profile .navbar-nav {
-    margin: 0;
-  }
-  .nav-user-profile .navbar-nav>li {
-    position: static;
-    float: left;
-  }
-  .nav-user-profile .navbar-nav>li>a {
-    padding-top: 15px;
-    padding-bottom: 15px;
-    line-height: 20px;
-  }
-}
+
 </style>
 </head>
 <body>
   <header>  
-  <nav class="navbar navbar-expand-sm navbar-dark mx-auto navbar-toggle" style="background-color:black;">
+  <nav class="navbar navbar-expand-sm navbar-dark mx-auto bg-dark" style="background-color:black;">
         <!-- Brand -->
         
-      
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
         <!-- Links -->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item">
             <a href="#abtme" class="nav-link"> About Me</a>
@@ -116,6 +97,7 @@
             </div>
           </li>
         </ul>
+        </div>
       </nav>
   </header>
     <div class="hero-image">
