--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
   background-size: cover;
 }
 
+
 </style>
 </head>
 <body>
@@ -101,7 +102,7 @@
       </nav>
   </header>
     <div class="hero-image">
-        <div class="hero-text"><h1 style="font-size:120px">HARSHIL SAGAR</h1> <h3>Welcome to my official page</h3> swipe up to know more<br><br>
+        <div class="hero-text"><h1 style="font-size:100%">HARSHIL SAGAR</h1> <h3>Welcome to my official page</h3> swipe up to know more<br><br>
         <a href="#hspeaks"><button class="btn btn-outline-warning btn-lg">Harshil Speaks</button></a></div>
 
     </div>
@@ -112,7 +113,7 @@
   
           <!--Grid column-->
           <div class="col-md-12 text-center" id="abtme">
-            <h1 font-size="50px">About Me</h1>
+            <h1 font-size="50%">About Me</h1>
             <p text-align="justify">  Hey!! there its me Harshil Sagar a student of Indian INstitute of Technology </p>
              
           </div>
