--- a/index.html
+++ b/index.html
@@ -59,6 +59,25 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+@include media-breakpoint-up(sm) {
+  html {
+    font-size: 250%;
+  }
+}
+
+@include media-breakpoint-up(md) {
+  html {
+    font-size: 500%;
+  }
+}
+
+@include media-breakpoint-up(lg) {
+  html {
+    font-size: 750%;
+  }
+}
+  
+}
 
 
 </style>
