--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  
+  position: relative;
   background-attachment: fixed;
 }
 
@@ -57,7 +57,7 @@
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size:cover;
   
 }
 @include media-breakpoint-up(sm) {
@@ -77,7 +77,9 @@
     font-size: 750%;
   }
 }
-  
+@media screen and (min-width: 767px) {
+  .parallax{background-attachment:scroll;}
+}  
 }
 
 
