--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
   }
 }
 @media screen and (min-width: 767px) {
-  .parallax{background-attachment:scroll;}
+  .parallax{background-attachment:local;
+  background-size: contain;}
 }  
 }
 
