--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
   }
 }
 @media screen and (min-width: 767px) {
-  .parallax{background-attachment:local;
-  background-size: contain;}
+  .parallax{background-attachment:initial;
+  background-size:cover;}
 }  
 }
 
