--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 }
 @media screen and (min-width: 767px) {
   .parallax{background-attachment:initial;
-  background-size:cover;}
+  background-size:100%;}
 }  
 }
 
