--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 }
 
 @media screen and (min-width: 767px) {
-  .parallax{background-attachment:initial;
+  .parallax{background-attachment:unset;
   background-size:100%;}
 }  
 }
