--- a/index.html
+++ b/index.html
@@ -60,12 +60,21 @@
   background-size:cover;
   
 }
-
-@media screen and (min-width: 767px) {
-  .parallax{background-attachment:unset;
-  background-size:100%;}
-}  
+#plx
+{
+  
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
+.wtitle{
+  padding :150px 20px;
+
+}
+
+  
+
 
 
 </style>
@@ -108,6 +117,7 @@
         </div>
       </nav>
   </header>
+  
     <div class="hero-image">
         <div class="hero-text"><h1 style="font-size:500%">HARSHIL SAGAR</h1> <h3 style="font-size:250%">Welcome to my official page</h3 style="font-size:250%"> swipe up to know more<br><br>
         <a href="#hspeaks"><button class="btn btn-outline-warning btn-lg">Harshil Speaks</button></a></div>
